syntax = "proto3";
package anytype;
option go_package = "pb";

import "pkg/lib/pb/model/protos/models.proto";
import "pb/protos/changes.proto";

message SnapshotWithType {
  anytype.model.SmartBlockType sbType = 1;
  anytype.Change.Snapshot snapshot = 2;
}

message Profile {
  string mnemonic = 1;
  string name = 2;
  string avatar = 3;
  string address = 4;
  string spaceDashboardId = 5;
}